--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,7 +18,7 @@ jobs:
             - uses: actions/setup-python@v4
               with:
                   python-version: ${{ matrix.python-version }}
-            - name: Install Hatch
+            - name: Install dependencies
               env:
                 PIP_CONSTRAINT: .github/workflows/constraints.txt
               run: |
