--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,6 +9,7 @@ on:
 
 jobs:
     test:
+        name: Pytest
         runs-on: ubuntu-latest
         strategy:
             matrix:
@@ -32,6 +33,7 @@ jobs:
                 path: ".coverage.*"
 
     coverage:
+        name: Coverage
         runs-on: ubuntu-latest
         needs: test
         steps:
@@ -50,6 +52,9 @@ jobs:
             - name: Combine coverage data
               run: |
                 hatch run cov-report
+            - name: Create coverage XML report
+              run: |
+                hatch run cov-xml
             - uses: codecov/codecov-action@v3
               with:
                 fail_ci_if_error: true
