--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,7 @@ jobs:
             - uses: actions/checkout@v3
             - uses: actions/setup-python@v4
               with:
+                  cache: pip
                   python-version: ${{ matrix.python-version }}
             - name: Install dependencies
               env:
