--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,23 @@ on:
     workflow_dispatch: {}
 
 jobs:
+    lint:
+        name: Lint
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-python@v4
+              with:
+                  cache: pip
+                  python-version: "3.11"
+            - name: Install dependencies
+              env:
+                PIP_CONSTRAINT: .github/workflows/constraints.txt
+              run: |
+                pipx install hatch
+            - name: Run lint
+              run: |
+                hatch run style-gh
     test:
         name: Pytest
         runs-on: ubuntu-latest
