--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,6 +34,7 @@ jobs:
             -   uses: actions/download-artifact@v3
                 with:
                     name: dist
+                    path: dist
             -   name: Upload wheel to release
                 uses: svenstaro/upload-release-action@v2
                 with:
