--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,8 +7,30 @@ on:
         branches: [ main ]
     workflow_dispatch: {}
 
+concurrency:
+    cancel-in-progress: true
+    group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+
 jobs:
+    lint:
+        name: Lint
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-python@v4
+              with:
+                  cache: pip
+                  python-version: "3.11"
+            - name: Install dependencies
+              env:
+                PIP_CONSTRAINT: .github/workflows/constraints.txt
+              run: |
+                pipx install hatch
+            - name: Run lint
+              run: |
+                hatch run lint:style-gh
     test:
+        name: Pytest
         runs-on: ubuntu-latest
         strategy:
             matrix:
@@ -17,12 +39,45 @@ jobs:
             - uses: actions/checkout@v3
             - uses: actions/setup-python@v4
               with:
+                  cache: pip
                   python-version: ${{ matrix.python-version }}
-            - name: Install Hatch
+            - name: Install dependencies
               env:
                 PIP_CONSTRAINT: .github/workflows/constraints.txt
               run: |
                 pipx install hatch
             - name: Run tests
               run: |
-                hatch run cov
+                hatch run test-cov
+            - uses: actions/upload-artifact@v3
+              with:
+                name: coverage-data
+                path: ".coverage.*"
+
+    coverage:
+        name: Coverage
+        runs-on: ubuntu-latest
+        needs: test
+        steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-python@v4
+              with:
+                  python-version: "3.11"
+            - name: Install dependencies
+              env:
+                PIP_CONSTRAINT: .github/workflows/constraints.txt
+              run: |
+                pipx install hatch
+            - uses: actions/download-artifact@v3
+              with:
+                name: coverage-data
+            - name: Combine coverage data
+              run: |
+                hatch run cov-report
+            - name: Create coverage XML report
+              run: |
+                hatch run cov-xml
+            - uses: codecov/codecov-action@v3
+              with:
+                fail_ci_if_error: true
+                token: ${{ secrets.CODECOV_TOKEN }}
