--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -7,3 +7,30 @@ updates:
       timezone: America/Mexico_City
     assignees:
       - "edgarrmondragon"
+    reviewers:
+      - "edgarrmondragon"
+    commit-message:
+      prefix: "chore(deps): "
+      prefix-development: "chore(deps-dev): "
+  - package-ecosystem: pip
+    directory: /.github/workflows
+    schedule:
+      interval: monthly
+      timezone: America/Mexico_City
+    assignees:
+      - "edgarrmondragon"
+    reviewers:
+      - "edgarrmondragon"
+    commit-message:
+      prefix: "ci: "
+  - package-ecosystem: github-actions
+    directory: "/"
+    schedule:
+      interval: monthly
+      timezone: America/Mexico_City
+    assignees:
+      - "edgarrmondragon"
+    reviewers:
+      - "edgarrmondragon"
+    commit-message:
+      prefix: "ci: "
