--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,7 +32,9 @@ jobs:
     test:
         name: Pytest
         runs-on: ubuntu-latest
+        continue-on-error: ${{ matrix.python-version == '3.12-dev' }}
         strategy:
+            fail-fast: false
             matrix:
                 python-version: ["3.8", "3.9", "3.10", "3.11", "3.12-dev"]
         steps:
