--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ Source = "https://github.com/edgarrmondragon/sqlean-driver"
 source = "vcs"
 
 [tool.hatch.envs.default]
-dependencies = ["coverage[toml]>=6.5", "pytest"]
+dependencies = ["coverage[toml]>=6.5", "pytest", "sqlalchemy=={env:SQLALCHEMY_VERSION:1}.*"]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
 test-cov = "coverage run -m pytest {args:tests}"
