--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -54,7 +54,7 @@ jobs:
         strategy:
             matrix:
                 python-version: ["3.8", "3.9", "3.10", "3.11"]
-                sqlalchemy-version: ["1", "2"]
+                sqlalchemy-version: ["1.*", "2.*"]
         steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-python@v4
