test: Test on Windows and MacOS

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -49,12 +49,21 @@ jobs:
               hatch run typing:check
 
     test:
-        name: Pytest (Python ${{ matrix.python-version }}, SQLAlchemy ${{ matrix.sqlalchemy-version }})
+        name: Pytest (Python ${{ matrix.python-version }}, ${{ matrix.os }}, SQLAlchemy ${{ matrix.sqlalchemy-version }})
         runs-on: ubuntu-latest
         strategy:
             matrix:
+                os: ["ubuntu-latest"]
                 python-version: ["3.8", "3.9", "3.10", "3.11"]
                 sqlalchemy-version: ["1.*", "2.*"]
+                include:
+                    - python-version: "3.11"
+                      sqlalchemy-version: "2.*"
+                      os: "windows-latest"
+
+                    - python-version: "3.11"
+                      sqlalchemy-version: "2.*"
+                      os: "macos-latest"
         steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-python@v4
