Test on multiple windows versions

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,13 +53,13 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                os: ["ubuntu-latest"]
+                os: ["ubuntu-latest", "windows-latest"]
                 python-version: ["3.8", "3.9", "3.10", "3.11"]
                 sqlalchemy-version: ["1.*", "2.*"]
                 include:
-                    - python-version: "3.11"
-                      sqlalchemy-version: "2.*"
-                      os: "windows-latest"
+                    # - python-version: "3.11"
+                    #   sqlalchemy-version: "2.*"
+                    #   os: "windows-latest"
 
                     - python-version: "3.11"
                       sqlalchemy-version: "2.*"
