ci: pre-commit autoupdate

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,8 +3,20 @@ name: Test
 on:
     push:
         branches: [ main ]
+        paths:
+            - src/**
+            - tests/**
+            - pyproject.toml
+            - .github/workflows/test.yml
+            - .github/workflows/constraints.txt
     pull_request:
         branches: [ main ]
+        paths:
+            - src/**
+            - tests/**
+            - pyproject.toml
+            - .github/workflows/test.yml
+            - .github/workflows/constraints.txt
     workflow_dispatch: {}
 
 concurrency:
