--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.8"
 license = "MIT"
 keywords = []
 authors = [{ name = "Edgar Ramírez Mondragón", email = "edgarrm358@gmail.com" }]
+maintainers = [{ name = "Edgar Ramírez Mondragón", email = "edgarrm358@gmail.com" }]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
@@ -53,6 +54,7 @@ dev = [
 Documentation = "https://github.com/edgarrmondragon/sqlean-driver#readme"
 Issues = "https://github.com/edgarrmondragon/sqlean-driver/issues"
 Source = "https://github.com/edgarrmondragon/sqlean-driver"
+Changelog = "https://github.com/edgarrmondragon/sqlean-driver/blob/main/CHANGELOG.md"
 
 [tool.hatch.version]
 source = "vcs"
