--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,13 +71,19 @@ matrix-name-format = "{variable}_{value}"
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
 test-cov = "coverage run -m pytest {args:tests}"
-cov-xml = "coverage xml"
-cov-report = ["- coverage combine", "coverage report --show-missing"]
-cov = ["test-cov", "cov-report"]
 
 [[tool.hatch.envs.default.matrix]]
 sqlalchemy = ["1", "2"]
 python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
+
+[tool.hatch.envs.coverage]
+dependencies = [
+  "coverage[toml]>=6.5",
+]
+[tool.hatch.envs.coverage.scripts]
+json = "coverage json"
+xml = "coverage xml"
+report = ["coverage combine", "coverage report --show-missing"]
 
 [tool.hatch.envs.typing]
 dependencies = ["mypy>=1.0.0", "pytest"]
