--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,8 +42,10 @@ jobs:
               run: |
                 pipx install hatch
             - name: Run lint
+              env:
+                HATCH_ENV: lint
               run: |
-                hatch run lint:style-gh
+                hatch run style-gh
 
     typing:
       name: Typing
@@ -60,8 +62,10 @@ jobs:
             run: |
               pipx install hatch
           - name: Run typing
+            env:
+              HATCH_ENV: typing
             run: |
-              hatch run typing:check
+              hatch run check
 
     test:
         name: Pytest (Python ${{ matrix.python-version }}, ${{ matrix.os }}, SQLAlchemy ${{ matrix.sqlalchemy-version }})
@@ -95,9 +99,9 @@ jobs:
                 pipx install hatch
             - name: Run tests
               env:
-                HATCH_ENV: "py${{ matrix.python-version }}-sqlalchemy_${{ matrix.sqlalchemy-version }}"
+                HATCH_ENV: "test.py${{ matrix.python-version }}-sqlalchemy_${{ matrix.sqlalchemy-version }}"
               run: |
-                hatch run test-cov
+                hatch run cov
             - uses: actions/upload-artifact@v3
               with:
                 name: coverage-data
@@ -107,6 +111,8 @@ jobs:
         name: Coverage
         runs-on: ubuntu-latest
         needs: test
+        env:
+          HATCH_ENV: coverage
         steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-python@v4
@@ -122,10 +128,10 @@ jobs:
                 name: coverage-data
             - name: Combine coverage data
               run: |
-                hatch run coverage:report
+                hatch run report
             - name: Create coverage XML report
               run: |
-                hatch run coverage:xml
+                hatch run xml
             - uses: codecov/codecov-action@v3
               with:
                 fail_ci_if_error: true
