--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,21 +60,21 @@ Source = "https://github.com/edgarrmondragon/sqlean-driver"
 [tool.hatch.version]
 source = "vcs"
 
-[tool.hatch.envs.default]
+[tool.hatch.envs.test]
 dependencies = [
   "coverage[toml]>=6.5",
   "pytest",
   "pytest-github-actions-annotate-failures",
-  "sqlalchemy=={matrix:sqlalchemy}.*",
+  "sqlalchemy=={matrix:sqlalchemy:2}.*",
 ]
 matrix-name-format = "{variable}_{value}"
-[tool.hatch.envs.default.env-vars]
+[tool.hatch.envs.test.env-vars]
 SQLALCHEMY_WARN_20 = "1"
-[tool.hatch.envs.default.scripts]
-test = "pytest {args:tests}"
-test-cov = "coverage run -m pytest {args:tests}"
+[tool.hatch.envs.test.scripts]
+run = "pytest {args:tests}"
+cov = "coverage run -m pytest {args:tests}"
 
-[[tool.hatch.envs.default.matrix]]
+[[tool.hatch.envs.test.matrix]]
 sqlalchemy = ["1", "2"]
 python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
