--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,13 +112,109 @@ ignore = [
 ]
 line-length = 100
 select = [
-  "ALL",
+  "F",       # Pyflakes
+  "E",       # pycodestyle (error)
+  "E111",    # indentation-with-invalid-multiple
+  "E112",    # no-indented-bloc
+  "E113",    # unexpected-indentation
+  "E114",    # indentation-with-invalid-multiple-comment
+  "E115",    # no-indented-block-comment
+  "E116",    # unexpected-indentation-comment
+  "E117",    # over-indented
+  "E201",    # whitespace-after-open-bracket
+  "E202",    # whitespace-before-close-bracket
+  "E203",    # whitespace-before-punctuation
+  "E211",    # whitespace-before-parameters
+  "E221",    # multiple-spaces-before-operator
+  "E222",    # multiple-spaces-after-operator
+  "E223",    # tab-before-operator
+  "E224",    # tab-after-operator
+  "E225",    # missing-whitespace-around-operator
+  "E226",    # missing-whitespace-around-arithmetic-operator
+  "E227",    # missing-whitespace-around-bitwise-or-shift-operator
+  "E228",    # missing-whitespace-around-modulo-operator
+  "E231",    # missing-whitespace
+  "E241",    # multiple-spaces-after-comma
+  "E242",    # tab-after-comma
+  "E251",    # unexpected-spaces-around-keyword-parameter-equals
+  "E252",    # missing-whitespace-around-parameter-equals
+  "E261",    # too-few-spaces-before-inline-comment
+  "E262",    # no-space-after-inline-comment
+  "E265",    # no-space-after-block-comment
+  "E266",    # multiple-leading-hashes-for-block-comment
+  "E271",    # multiple-spaces-after-keyword
+  "E272",    # multiple-spaces-before-keyword
+  "E273",    # tab-after-keyword
+  "E274",    # tab-before-keyword
+  "E275",    # missing-whitespace-after-keyword
+  "W",       # pycodestyle (warning)
+  "C90",     # mccabe
+  "I",       # isort
+  "N",       # pep8-naming
+  "D",       # pydocstyle
+  "UP",      # pyupgrade
+  "YTT",     # flake8-2020
+  "ANN",     # flake8-annotations
+  "S",       # bandit
+  "BLE",     # flake8-blind-except
+  "FBT",     # flake8-boolean-trap
+  "B",       # flake8-bugbear
+  "A",       # flake8-builtins
+  "COM",     # flake8-commas
+  "C4",      # flake8-comprehensions
+  "DTZ",     # flake8-datetimez
+  "T10",     # flake8-debugger
+  "EM",      # flake8-errmsg
+  "FA",      # flake8-future-annotations
+  "ISC",     # flake8-implicit-str-concat
+  "ICN",     # flake8-import-conventions
+  "G",       # flake8-logging-format
+  "INP",     # flake8-no-pep420
+  "PIE",     # flake8-pie
+  "T20",     # flake8-print
+  "PT",      # flake8-pytest-style
+  "Q",       # flake8-quotes
+  "RSE",     # flake8-raise
+  "RET",     # flake8-return
+  "SLF",     # flake8-self
+  "SLOT",    # flake8-slots
+  "SIM",     # flake8-simplify
+  "TID",     # flake8-tidy-imports
+  "TCH",     # flake8-type-checking
+  "ARG",     # flake8-unused-arguments
+  "PTH",     # flake8-use-pathlib
+  "TD",      # flake8-todos
+  "FIX",     # flake8-fixme
+  "ERA",     # flake8-eradicate
+  "PD",      # pandas-vet
+  "PGH",     # pygrep-hooks
+  "PLC",     # pylint
+  "PLC1901", # compare-to-empty-string
+  "PLE",     # pylint
+  "PLR",     # pylint
+  "PLR6301", # no-self-use
+  "PLW",     # pylint
+  "PLW1641", # eq-without-hash
+  "PLW3201", # bad-dunder-method-name
+  "TRY",     # tryceratops
+  "FLY",     # flynt
+  "PERF",    # perflint
+  "FURB113", # repeated-append
+  "FURB131", # delete-full-slice
+  "FURB132", # check-and-remove-from-set
+  "RUF",     # Ruff-specific rules
 ]
 target-version = "py38"
 
 [tool.ruff.isort]
 known-first-party = ["sqlean_driver"]
 required-imports = ["from __future__ import annotations"]
+
+[tool.ruff.flake8-import-conventions]
+banned-from = ["typing"]
+
+[tool.ruff.flake8-import-conventions.extend-aliases]
+typing = "t"
 
 [tool.ruff.flake8-tidy-imports]
 ban-relative-imports = "all"
@@ -137,7 +233,6 @@ addopts = ["-vv", "-W error"]
 source_pkgs = ["sqlean_driver", "tests"]
 branch = true
 parallel = true
-omit = ["src/sqlean_driver/__about__.py"]
 
 [tool.coverage.paths]
 sqlean_driver = ["src/sqlean_driver", "*/sqlean-driver/src/sqlean_driver"]
