feat: Implement custom types for `ipaddr` and `uuid` extensions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
   "greenlet>=3.0.0a1",
   "sqlalchemy>=1.4",
   "sqlean-py>=0.21.5.1",
+  'typing-extensions; python_version < "3.10"',
 ]
 [project.optional-dependencies]
 dev = [
@@ -205,10 +206,16 @@ select = [
   "RUF",     # Ruff-specific rules
 ]
 target-version = "py38"
+unfixable = [
+  "ERA",
+]
 
 [tool.ruff.isort]
 known-first-party = ["sqlean_driver"]
 required-imports = ["from __future__ import annotations"]
+
+[tool.ruff.flake8-annotations]
+allow-star-arg-any = true
 
 [tool.ruff.flake8-import-conventions]
 banned-from = ["typing"]
@@ -218,6 +225,9 @@ typing = "t"
 
 [tool.ruff.flake8-tidy-imports]
 ban-relative-imports = "all"
+
+[tool.ruff.pep8-naming]
+ignore-names = ["visit_*"]
 
 [tool.ruff.per-file-ignores]
 # Tests can use magic values, assertions, and relative imports
