--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,6 +36,7 @@ jobs:
               with:
                   cache: pip
                   python-version: "3.12"
+                  allow-prereleases: true
             - name: Install dependencies
               env:
                 PIP_CONSTRAINT: .github/workflows/constraints.txt
@@ -56,6 +57,7 @@ jobs:
             with:
                 cache: pip
                 python-version: "3.12"
+                allow-prereleases: true
           - name: Install dependencies
             env:
               PIP_CONSTRAINT: .github/workflows/constraints.txt
@@ -118,6 +120,7 @@ jobs:
             - uses: actions/setup-python@v4
               with:
                   python-version: "3.12"
+                  allow-prereleases: true
             - name: Install dependencies
               env:
                 PIP_CONSTRAINT: .github/workflows/constraints.txt
