--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,8 @@ jobs:
             -   uses: actions/checkout@v4
             -   uses: actions/setup-python@v4
                 with:
-                    python-version: 3.8
+                    python-version: 3.12
+                    allow-prereleases: true
             -   name: Install dependencies
                 env:
                     PIP_CONSTRAINT: .github/workflows/constraints.txt
