--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,15 @@ dependencies = [
 matrix-name-format = "{variable}_{value}"
 [tool.hatch.envs.test.env-vars]
 SQLALCHEMY_WARN_20 = "1"
+[tool.hatch.envs.test.overrides]
+env.GITHUB_ACTIONS.dev-mode = { value = false, if = ["true"] }
+
+[[tool.hatch.envs.test.overrides.matrix.sqlalchemy.env-vars]]
+key = "PIP_ONLY_BINARY"
+value = ":all:"
+if = ["2"]
+platform = ["macos"]
+
 [tool.hatch.envs.test.scripts]
 run = "pytest {args:tests}"
 cov = "coverage run -m pytest {args:tests}"
