--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -89,7 +89,7 @@ jobs:
             - uses: actions/checkout@v4
             - uses: actions/setup-python@v4
               with:
-                  # cache: pip
+                  cache: pip
                   python-version: ${{ matrix.python-version }}
                   allow-prereleases: true
                   architecture: x64
