--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -102,7 +102,7 @@ jobs:
               env:
                 HATCH_ENV: "test.py${{ matrix.python-version }}-sqlalchemy_${{ matrix.sqlalchemy-version }}"
               run: |
-                hatch -vvv run cov
+                hatch run cov
             - uses: actions/upload-artifact@v3
               with:
                 name: coverage-data
@@ -119,7 +119,6 @@ jobs:
             - uses: actions/setup-python@v4
               with:
                   python-version: "3.11"
-                  architecture: x64
             - name: Install dependencies
               env:
                 PIP_CONSTRAINT: .github/workflows/constraints.txt
