--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,7 +35,7 @@ jobs:
             - uses: actions/setup-python@v4
               with:
                   cache: pip
-                  python-version: "3.11"
+                  python-version: "3.12"
             - name: Install dependencies
               env:
                 PIP_CONSTRAINT: .github/workflows/constraints.txt
@@ -55,7 +55,7 @@ jobs:
           - uses: actions/setup-python@v4
             with:
                 cache: pip
-                python-version: "3.11"
+                python-version: "3.12"
           - name: Install dependencies
             env:
               PIP_CONSTRAINT: .github/workflows/constraints.txt
@@ -78,11 +78,11 @@ jobs:
                 python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
                 sqlalchemy-version: ["1", "2"]
                 include:
-                    - python-version: "3.11"
+                    - python-version: "3.12"
                       sqlalchemy-version: "2"
                       os: "windows-latest"
 
-                    - python-version: "3.11"
+                    - python-version: "3.12"
                       sqlalchemy-version: "2"
                       os: "macos-latest"
         steps:
@@ -92,6 +92,7 @@ jobs:
                   cache: pip
                   python-version: ${{ matrix.python-version }}
                   allow-prereleases: true
+                  architecture: x64
             - name: Install dependencies
               env:
                 PIP_CONSTRAINT: .github/workflows/constraints.txt
