--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,16 @@ repos:
     rev: v0.0.292
     hooks:
       - id: ruff
-        args: [--fix, --exit-non-zero-on-fix, --show-fixes]
+        args: [--fix, --preview, --exit-non-zero-on-fix, --show-fixes]
+      - id: ruff
+        name: Ruff format
+        entry: ruff format
+
+  - repo: https://github.com/psf/black
+    rev: 23.9.1
+    hooks:
+    - id: black
+      language_version: python3.11
 
   - repo: https://github.com/tox-dev/pyproject-fmt
     rev: "1.2.0"
